--- a/package.json
+++ b/package.json
@@ -7,9 +7,6 @@
     "email": "info@elastic.io",
     "url": "http://elastic.io"
   },
-  "files": [
-    "lib"
-  ],
   "main": "lib/index.js",
   "keywords": [
     "elasticio",
@@ -17,17 +14,21 @@
     "elasticio-component"
   ],
   "scripts": {
-    "pretest": "eslint lib --fix"
+    "pretest": "eslint lib spec --fix",
+    "test": "mocha spec/** --timeout 50000"
   },
   "engines": {
     "node": "8.16.0"
   },
   "dependencies": {},
   "devDependencies": {
+    "chai": "4.2.0",
     "eslint": "5.16.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-airbnb-base": "13.1.0",
-    "eslint-plugin-import": "^2.17.2"
+    "eslint-plugin-import": "^2.17.2",
+    "mocha": "5.2.0",
+    "sinon": "5.1.1"
   },
   "repository": "elasticio/component-commons-library",
   "license": "Apache-2.0"
