--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
   "engines": {
     "node": "8.16.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "bunyan": "1.8.12",
+    "bunyan-format": "^0.2.1",
+    "bunyan-serializers": "0.0.2"
+  },
   "devDependencies": {
     "chai": "4.2.0",
     "eslint": "5.16.0",
