--- a/package.json
+++ b/package.json
@@ -31,12 +31,16 @@
     "bunyan": "1.8.12",
     "bunyan-format": "0.2.1",
     "bunyan-serializers": "0.0.2",
+    "request": "2.88.0",
+    "remove-leading-slash": "1.0.1",
+    "remove-trailing-slash": "0.1.0",
     "typescript": "3.4.4"
   },
   "devDependencies": {
     "@types/jest": "^24.0.16",
     "chai": "4.2.0",
     "mocha": "5.2.0",
+    "nock": "9.6.1",
     "sinon": "5.1.1",
     "ts-node": "8.1.0",
     "tslint": "5.16.0",
