--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node": "8.16.0"
   },
   "dependencies": {
+    "@elastic.io/jsonata-moment": "1.1.3",
     "@types/node": "8.10.51",
     "axios": "0.18.1",
     "bunyan": "1.8.12",
