--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@types/jest": "24.0.16",
     "chai": "4.2.0",
+    "chai-as-promised": "7.1.1",
     "mocha": "5.2.0",
     "nock": "9.6.1",
     "sinon": "5.1.1",
