--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bunyan-serializers": "0.0.2",
     "elasticio-node": "0.0.9",
     "elasticio-rest-node": "1.2.3",
+    "ntlm-client": "git://github.com/elasticio/node-ntlm-client.git#remove-undesirable-default-header",
     "remove-leading-slash": "1.0.1",
     "remove-trailing-slash": "0.1.0",
     "request": "2.88.0",
