--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elastic.io/component-commons-library",
-  "version": "0.0.7",
+  "version": "1.0.0",
   "description": "Library for most common component development cases",
   "author": {
     "name": "elastic.io GmbH",
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@elastic.io/jsonata-moment": "1.1.4",
+    "@elastic.io/ntlm-client": "1.0.0",
     "@types/node": "8.10.51",
     "axios": "0.18.1",
     "bunyan": "1.8.12",
@@ -37,7 +38,6 @@
     "bunyan-serializers": "0.0.2",
     "elasticio-node": "0.0.9",
     "elasticio-rest-node": "1.2.3",
-    "ntlm-client": "git://github.com/elasticio/node-ntlm-client.git#remove-undesirable-default-header",
     "remove-leading-slash": "1.0.1",
     "remove-trailing-slash": "0.1.0",
     "request": "2.88.0",
