--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elastic.io/component-commons-library",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Library for most common component development cases",
   "author": {
     "name": "elastic.io GmbH",
@@ -26,7 +26,7 @@
     "posttest": "npm run tsc"
   },
   "engines": {
-    "node": "8.16.0"
+    "node": ">=8.16.0"
   },
   "dependencies": {
     "@elastic.io/jsonata-moment": "1.1.4",
