--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elastic.io/component-commons-library",
-  "version": "1.1.4",
+  "version": "1.1.5-pre1",
   "description": "Library for most common component development cases",
   "author": {
     "name": "elastic.io GmbH",
