--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elastic.io/component-commons-library",
-  "version": "1.1.4",
+  "version": "1.1.5-dev.1",
   "description": "Library for most common component development cases",
   "author": {
     "name": "elastic.io GmbH",
@@ -26,13 +26,13 @@
     "posttest": "npm run tsc"
   },
   "engines": {
-    "node": ">=12"
+    "node": ">=14"
   },
   "dependencies": {
     "@elastic.io/jsonata-moment": "1.1.4",
     "@elastic.io/ntlm-client": "1.0.0",
     "@types/node": "14.10.1",
-    "axios": "0.20.0",
+    "axios": "0.21.0",
     "bunyan": "1.8.14",
     "bunyan-format": "0.2.1",
     "bunyan-serializers": "0.0.2",
