--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@elastic.io/jsonata-moment": "1.1.4",
+    "@elastic.io/maester-client": "3.4.0-dev.3",
     "@elastic.io/ntlm-client": "1.0.0",
     "@types/node": "14.14.3",
     "axios": "0.21.0",
