--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elastic.io/component-commons-library",
-  "version": "1.1.6-dev.4",
+  "version": "1.1.6-dev.5",
   "description": "Library for most common component development cases",
   "author": {
     "name": "elastic.io GmbH",
@@ -30,7 +30,7 @@
   },
   "dependencies": {
     "@elastic.io/jsonata-moment": "1.1.4",
-    "@elastic.io/maester-client": "3.4.0",
+    "@elastic.io/maester-client": "3.4.1-dev.1",
     "@elastic.io/ntlm-client": "1.0.0",
     "@types/node": "14.14.3",
     "axios": "0.21.0",
