--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@elastic.io/component-commons-library",
-  "version": "1.1.6",
+  "version": "1.1.7-dev.1",
   "description": "Library for most common component development cases",
   "author": {
     "name": "elastic.io GmbH",
     "email": "info@elastic.io",
-    "url": "http://elastic.io"
+    "url": "https://elastic.io"
   },
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
