--- a/package.json
+++ b/package.json
@@ -26,13 +26,15 @@
     "posttest": "npm run tsc"
   },
   "engines": {
-    "node": ">=12"
+    "node": "14"
   },
   "dependencies": {
     "@elastic.io/jsonata-moment": "1.1.4",
     "@elastic.io/ntlm-client": "1.0.0",
+    "@types/chai-as-promised": "7.1.4",
     "@types/node": "14.14.3",
-    "axios": "0.21.0",
+    "axios": "0.21.1",
+    "axios-cookiejar-support": "1.0.1",
     "bunyan": "1.8.14",
     "bunyan-format": "0.2.1",
     "bunyan-serializers": "0.0.2",
@@ -40,7 +42,7 @@
     "elasticio-rest-node": "1.2.6",
     "remove-leading-slash": "1.0.1",
     "remove-trailing-slash": "0.1.1",
-    "request": "2.88.2",
+    "tough-cookie": "4.0.0",
     "typescript": "4.0.3"
   },
   "devDependencies": {
