--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "@elastic.io/jsonata-moment": "1.1.4",
     "@elastic.io/maester-client": "3.4.1",
     "@elastic.io/ntlm-client": "1.0.0",
-    "@types/node": "14.14.3",
     "async": "3.2.0",
     "axios": "0.24.0",
     "bunyan": "1.8.14",
@@ -42,11 +41,11 @@
     "elasticio-rest-node": "1.2.6",
     "remove-leading-slash": "1.0.1",
     "remove-trailing-slash": "0.1.1",
-    "request": "2.88.2",
-    "typescript": "4.0.3"
+    "request": "2.88.2"
   },
   "devDependencies": {
     "@types/jest": "26.0.15",
+    "@types/node": "14.14.3",
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "mocha": "8.4.0",
@@ -54,7 +53,8 @@
     "sinon": "9.2.0",
     "ts-node": "9.0.0",
     "tslint": "6.1.3",
-    "tslint-config-airbnb": "5.11.2"
+    "tslint-config-airbnb": "5.11.2",
+    "typescript": "4.0.3"
   },
   "repository": "elasticio/component-commons-library",
   "license": "Apache-2.0"
