--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elastic.io/component-commons-library",
-  "version": "1.2.1",
+  "version": "2.0.0",
   "description": "Library for most common component development cases",
   "author": {
     "name": "elastic.io GmbH",
@@ -21,9 +21,10 @@
     "tsc": "rm -fr out && tsc",
     "pretest": "tslint -c tslint.json --project tsconfig.json  lib/**/*.ts spec/**/*.ts --fix",
     "preparepublish": "npm run tsc",
-    "prepublishOnly": "tsc -p ./ --outDir lib/",
+    "prepublishOnly": "tsc",
     "test": "LOG_LEVEL=trace LOG_OUTPUT_MODE=long mocha --require ts-node/register test/**/*.ts --timeout 50000",
-    "posttest": "npm run tsc"
+    "posttest": "npm run tsc",
+    "integration-test": "npm run pretest && mocha --require ts-node/register \"spec-integration/**/*spec.ts\" --timeout 10000"
   },
   "engines": {
     "node": ">=12"
@@ -38,7 +39,6 @@
     "bunyan-format": "0.2.1",
     "bunyan-serializers": "0.0.2",
     "elasticio-node": "0.0.9",
-    "elasticio-rest-node": "1.2.6",
     "remove-leading-slash": "1.0.1",
     "remove-trailing-slash": "0.1.1",
     "request": "2.88.2"
@@ -48,6 +48,7 @@
     "@types/node": "14.14.3",
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
+    "dotenv": "10.0.0",
     "mocha": "9.1.3",
     "nock": "13.0.4",
     "sinon": "9.2.0",
