--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elastic.io/component-commons-library",
-  "version": "2.0.1-dev.1",
+  "version": "2.0.1-dev.2",
   "description": "Library for most common component development cases",
   "author": {
     "name": "elastic.io GmbH",
@@ -18,13 +18,13 @@
     "elasticio-component"
   ],
   "scripts": {
-    "tsc": "rm -fr out && tsc",
-    "pretest": "tslint -c tslint.json --project tsconfig.json  lib/**/*.ts spec/**/*.ts --fix",
-    "preparepublish": "npm run tsc",
-    "prepublishOnly": "tsc",
-    "test": "LOG_LEVEL=trace LOG_OUTPUT_MODE=long mocha --require ts-node/register test/**/*.ts --timeout 50000",
-    "posttest": "npm run tsc",
-    "integration-test": "npm run pretest && mocha --require ts-node/register \"spec-integration/**/*spec.ts\" --timeout 10000"
+    "lint": "eslint --ext .ts --quiet --fix",
+    "pretest": "eslint --ext .ts --quiet --fix && find src spec spec-integration -name \"*.js\" -type f -delete && rm -f verifyCredentials.js",
+    "test": "nyc mocha --require ts-node/register \"spec/**/*spec.ts\" --timeout 10000",
+    "posttest": "tsc",
+    "integration-test": "npm run pretest && nyc mocha --require ts-node/register \"spec-integration/**/*spec.ts\" --timeout 500000",
+    "preparepublish": "tsc",
+    "prepublishOnly": "tsc"
   },
   "engines": {
     "node": ">=12"
@@ -44,18 +44,26 @@
     "request": "2.88.2"
   },
   "devDependencies": {
-    "@types/jest": "26.0.15",
-    "@types/node": "14.14.3",
-    "chai": "4.2.0",
+    "@types/mocha": "9.0.0",
+    "@types/chai": "4.3.0",
+    "@types/chai-as-promised": "7.1.4",
+    "@types/node": "16.9.6",
+    "@typescript-eslint/eslint-plugin": "4.30.0",
+    "@typescript-eslint/parser": "4.30.0",
+    "chai": "4.3.4",
     "chai-as-promised": "7.1.1",
     "dotenv": "10.0.0",
-    "mocha": "9.1.3",
     "nock": "13.0.4",
-    "sinon": "9.2.0",
-    "ts-node": "9.0.0",
     "tslint": "6.1.3",
     "tslint-config-airbnb": "5.11.2",
-    "typescript": "4.0.3"
+    "eslint": "7.32.0",
+    "eslint-config-airbnb-base": "14.2.1",
+    "eslint-plugin-import": "2.24.2",
+    "mocha": "9.2.2",
+    "nyc": "15.1.0",
+    "sinon": "11.1.2",
+    "ts-node": "10.2.1",
+    "typescript": "4.4.3"
   },
   "repository": "elasticio/component-commons-library",
   "license": "Apache-2.0"
