--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,28 @@
 {
   "compilerOptions": {
-    "target": "es2018",
+    "baseUrl": ".",
+    "paths": {
+      "*": [
+        "types/*"
+      ]
+    },
+    "target": "es2019",
+    "lib": [
+      "es2019"
+    ],
     "module": "commonjs",
-    "allowJs": false,
+    "allowJs": true,
     "checkJs": false,
-    "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
-    "outDir": "./out",
-    "strict": true,
-    "noImplicitAny": false,
-    "strictNullChecks": true,
-    "strictPropertyInitialization": true,
-    "noImplicitThis": false,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
     "moduleResolution": "node",
+    "rootDirs": [
+      "./"
+    ],
+    "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "resolveJsonModule": true
   },
   "exclude": [
-    "test/*"
+    "node_modules",
+    "coverage"
   ]
 }
