--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "name": "@elastic.io/component-commons-library",
-  "version": "2.0.1-dev.4",
+  "version": "2.0.1-dev.5",
   "description": "Library for most common component development cases",
   "author": {
     "name": "elastic.io GmbH",
     "email": "info@elastic.io",
     "url": "http://elastic.io"
   },
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
   "files": [
-    "lib"
+    "src"
   ],
   "keywords": [
     "elasticio",
