--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elastic.io/component-commons-library",
-  "version": "2.0.1-dev.5",
+  "version": "2.0.1-dev.6",
   "description": "Library for most common component development cases",
   "author": {
     "name": "elastic.io GmbH",
@@ -18,6 +18,7 @@
   "scripts": {
     "lint": "eslint --ext .ts --quiet --fix",
     "pretest": "eslint --ext .ts --quiet --fix && find src spec spec-integration -name \"*.js\" -type f -delete",
+    "posttest": "npm run pretest",
     "test": "nyc mocha --require ts-node/register \"spec/**/*spec.ts\" --timeout 10000",
     "integration-test": "npm run pretest && nyc mocha --require ts-node/register \"spec-integration/**/*spec.ts\" --timeout 500000",
     "build": "tsc"
