--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
   "name": "@elastic.io/component-commons-library",
-  "version": "2.0.1-dev.9",
+  "version": "2.0.1-dev.10",
   "description": "Library for most common component development cases",
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "author": {
     "name": "elastic.io GmbH",
     "email": "info@elastic.io",
     "url": "http://elastic.io"
   },
-  "files": [
-    "dist",
-    "src"
-  ],
   "keywords": [
     "elasticio",
     "ipaas",
     "elasticio-component"
   ],
   "scripts": {
-    "lint": "eslint --ext .ts --quiet --fix",
-    "pretest": "rm -rf dist && eslint --ext .ts --quiet --fix && find src spec spec-integration -name \"*.js\" -type f -delete",
-    "posttest": "tsc",
-    "test": "nyc mocha --require ts-node/register \"spec/**/*spec.ts\" --timeout 10000",
-    "integration-test": "npm run pretest && nyc mocha --require ts-node/register \"spec-integration/**/*spec.ts\" --timeout 500000",
-    "build": "rm -rf dist tsc"
+    "tsc": "rm -fr dist && tsc",
+    "lint": "eslint '*/**/*.ts' --quiet --fix",
+    "test": "NODE_ENV=test nyc mocha -r ts-node/register --recursive ./spec/**/*.ts",
+    "pretest": "npm run lint && find src spec -name \"*.js\" -type f -delete",
+    "posttest": "npm run tsc",
+    "build": "npm run tsc",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm run lint && npm run test"
   },
   "engines": {
     "node": ">=12"
@@ -42,25 +42,26 @@
     "request": "2.88.2"
   },
   "devDependencies": {
-    "@types/mocha": "9.0.0",
+    "@types/async": "^3.2.12",
     "@types/chai": "4.3.0",
     "@types/chai-as-promised": "7.1.4",
+    "@types/mocha": "9.0.0",
     "@types/node": "16.9.6",
     "@typescript-eslint/eslint-plugin": "4.30.0",
     "@typescript-eslint/parser": "4.30.0",
     "chai": "4.3.4",
     "chai-as-promised": "7.1.1",
     "dotenv": "10.0.0",
-    "nock": "13.0.4",
-    "tslint": "6.1.3",
-    "tslint-config-airbnb": "5.11.2",
     "eslint": "7.32.0",
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-plugin-import": "2.24.2",
     "mocha": "9.2.2",
+    "nock": "13.0.4",
     "nyc": "15.1.0",
     "sinon": "11.1.2",
     "ts-node": "10.2.1",
+    "tslint": "6.1.3",
+    "tslint-config-airbnb": "5.11.2",
     "typescript": "4.4.3"
   },
   "repository": "elasticio/component-commons-library",
