--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,22 @@
 {
   "compilerOptions": {
+    "module": "commonjs",
+    "esModuleInterop": true,
+    "target": "es2019",
+    "declaration": true,
+    "noImplicitAny": false,
+    "moduleResolution": "node",
     "outDir": "dist",
+    "stripInternal": true,
+    "resolveJsonModule": true,
     "baseUrl": ".",
     "paths": {
       "*": [
-        "types/*"
+        "node_modules/*"
       ]
-    },
-    "target": "es2019",
-    "lib": [
-      "es2019"
-    ],
-    "module": "commonjs",
-    "allowJs": true,
-    "checkJs": false,
-    "moduleResolution": "node",
-    "rootDirs": [
-      "./"
-    ],
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "resolveJsonModule": true
+    }
   },
-  "exclude": [
-    "node_modules",
-    "coverage"
+  "include": [
+    "src/**/*"
   ]
 }
