--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,30 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "esModuleInterop": true,
-    "target": "es2019",
-    "declaration": true,
-    "noImplicitAny": false,
-    "moduleResolution": "node",
     "outDir": "dist",
-    "stripInternal": true,
-    "resolveJsonModule": true,
     "baseUrl": ".",
     "paths": {
       "*": [
-        "node_modules/*"
+        "types/*"
       ]
-    }
+    },
+    "target": "es2019",
+    "lib": [
+      "es2019"
+    ],
+    "declaration": true,
+    "module": "commonjs",
+    "allowJs": true,
+    "checkJs": false,
+    "moduleResolution": "node",
+    "rootDirs": [
+      "./"
+    ],
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true
   },
-  "include": [
-    "src/**/*"
+  "exclude": [
+    "node_modules",
+    "coverage"
   ]
 }
