--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@elastic.io/component-commons-library",
-  "version": "2.0.1-dev.12",
+  "version": "2.0.1-dev.13",
   "description": "Library for most common component development cases",
   "author": {
     "name": "elastic.io GmbH",
     "email": "info@elastic.io",
     "url": "http://elastic.io"
   },
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "files": [
     "dist",
     "src"
