--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "lint": "eslint --ext .ts --quiet --fix",
     "pretest": "rm -rf dist && eslint --ext .ts --quiet --fix && find src spec spec-integration -name \"*.js\" -type f -delete",
     "posttest": "tsc",
-    "test": "nyc mocha --require ts-node/register \"spec/**/*spec.ts\" --timeout 10000",
+    "test": "nyc mocha --require ts-node/register \"spec/**/*spec.ts\" --timeout 50000",
     "integration-test": "npm run pretest && nyc mocha --require ts-node/register \"spec-integration/**/*spec.ts\" --timeout 500000",
     "build": "rm -rf dist tsc"
   },
@@ -34,11 +34,14 @@
     "@elastic.io/maester-client": "3.4.3",
     "@elastic.io/ntlm-client": "1.0.0",
     "async": "3.2.3",
-    "axios": "0.24.0",
+    "axios": "0.27.2",
+    "axios-retry": "3.2.4",
     "bunyan": "1.8.14",
     "bunyan-format": "0.2.1",
     "bunyan-serializers": "0.0.2",
+    "combined-stream": "^1.0.8",
     "elasticio-node": "0.0.9",
+    "form-data": "^4.0.0",
     "remove-leading-slash": "1.0.1",
     "remove-trailing-slash": "0.1.1",
     "request": "2.88.2"
