--- a/package.json
+++ b/package.json
@@ -35,13 +35,11 @@
     "@elastic.io/ntlm-client": "1.0.0",
     "async": "3.2.3",
     "axios": "0.27.2",
-    "axios-retry": "3.2.4",
     "bunyan": "1.8.14",
     "bunyan-format": "0.2.1",
     "bunyan-serializers": "0.0.2",
-    "combined-stream": "^1.0.8",
     "elasticio-node": "0.0.9",
-    "form-data": "^4.0.0",
+    "form-data": "4.0.0",
     "remove-leading-slash": "1.0.1",
     "remove-trailing-slash": "0.1.1",
     "request": "2.88.2"
