--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elastic.io/component-commons-library",
-  "version": "2.0.2",
+  "version": "2.1.0",
   "description": "Library for most common component development cases",
   "author": {
     "name": "elastic.io GmbH",
@@ -22,9 +22,9 @@
     "lint": "eslint --ext .ts --quiet --fix",
     "pretest": "rm -rf dist && eslint --ext .ts --quiet --fix && find src spec spec-integration -name \"*.js\" -type f -delete",
     "posttest": "tsc",
-    "test": "nyc mocha --require ts-node/register \"spec/**/*spec.ts\" --timeout 10000",
+    "test": "nyc mocha --require ts-node/register \"spec/**/*spec.ts\" --timeout 50000",
     "integration-test": "npm run pretest && nyc mocha --require ts-node/register \"spec-integration/**/*spec.ts\" --timeout 500000",
-    "build": "rm -rf dist tsc"
+    "build": "rm -rf dist && tsc"
   },
   "engines": {
     "node": ">=12"
@@ -34,11 +34,12 @@
     "@elastic.io/maester-client": "3.4.3",
     "@elastic.io/ntlm-client": "1.0.0",
     "async": "3.2.3",
-    "axios": "0.24.0",
+    "axios": "0.27.2",
     "bunyan": "1.8.14",
     "bunyan-format": "0.2.1",
     "bunyan-serializers": "0.0.2",
     "elasticio-node": "0.0.9",
+    "form-data": "4.0.0",
     "remove-leading-slash": "1.0.1",
     "remove-trailing-slash": "0.1.1",
     "request": "2.88.2"
