--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "email": "info@elastic.io",
     "url": "http://elastic.io"
   },
-  "main": "dist/src/index.js",
-  "types": "dist/src/index.d.ts",
+  "main": "src/index.js",
+  "types": "src/index.d.ts",
   "files": [
     "dist",
     "src"
@@ -19,7 +19,7 @@
     "elasticio-component"
   ],
   "scripts": {
-    "lint": "eslint --ext .ts --quiet --fix",
+    "lint": "eslint '*/**/*[^.d$].ts' --quiet --fix",
     "pretest": "rm -rf dist && eslint --ext .ts --quiet --fix && find src spec spec-integration -name \"*.js\" -type f -delete",
     "posttest": "tsc",
     "test": "nyc mocha --require ts-node/register \"spec/**/*spec.ts\" --timeout 50000",
