add fetchSecretById and refreshTokenBySecretId for `PlatformApiLogicClient`

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
 ELASTICIO_OBJECT_STORAGE_TOKEN=feyJhbGciasfdJ0uhN__D0asdasdq283d283d
 ELASTICIO_OBJECT_STORAGE_URI=http://localhost:3002
+ELASTICIO_API_USERNAME=email@example.io
+ELASTICIO_API_KEY=3333-4444-2222-3333-2222222
+ELASTICIO_API_URI=https://api.elastic.io
+ELASTICIO_WORKSPACE_ID=2323232fdfdfd232323
+SECRET_ID=sdsdsd2323232df
