--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elastic.io/component-commons-library",
-  "version": "3.1.0",
+  "version": "3.1.1-dev.1",
   "description": "Library for most common component development cases",
   "author": {
     "name": "elastic.io GmbH",
@@ -27,7 +27,7 @@
     "build": "rm -rf dist && tsc"
   },
   "dependencies": {
-    "@elastic.io/jsonata-moment": "1.1.4",
+    "@elastic.io/jsonata-moment": "1.1.5",
     "@elastic.io/maester-client": "4.0.3",
     "@elastic.io/ntlm-client": "1.0.0",
     "async": "3.2.3",
@@ -51,7 +51,7 @@
     "chai-as-promised": "7.1.1",
     "dotenv": "10.0.0",
     "nock": "13.0.4",
-    "tslint": "6.1.3",
+    "tslint": "5.11.0",
     "tslint-config-airbnb": "5.11.2",
     "eslint": "7.32.0",
     "eslint-config-airbnb-base": "14.2.1",
