--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elastic.io/component-commons-library",
-  "version": "3.1.1",
+  "version": "3.1.2",
   "description": "Library for most common component development cases",
   "author": {
     "name": "elastic.io GmbH",
@@ -41,26 +41,26 @@
     "request": "2.88.2"
   },
   "devDependencies": {
-    "@types/mocha": "9.0.0",
     "@types/chai": "4.3.0",
     "@types/chai-as-promised": "7.1.4",
+    "@types/mocha": "9.0.0",
     "@types/node": "16.9.6",
     "@typescript-eslint/eslint-plugin": "4.30.0",
     "@typescript-eslint/parser": "4.30.0",
     "chai": "4.3.4",
     "chai-as-promised": "7.1.1",
     "dotenv": "10.0.0",
-    "nock": "13.0.4",
-    "tslint": "5.11.0",
-    "tslint-config-airbnb": "5.11.2",
     "eslint": "7.32.0",
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-plugin-import": "2.24.2",
     "mocha": "9.2.2",
+    "nock": "13.0.4",
     "nyc": "15.1.0",
     "sinon": "11.1.2",
     "ts-node": "10.2.1",
-    "typescript": "4.4.3"
+    "tslint": "5.11.0",
+    "tslint-config-airbnb": "5.11.2",
+    "typescript": "^4.8.4"
   },
   "repository": "elasticio/component-commons-library",
   "license": "Apache-2.0"
