--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "posttest": "tsc",
     "test": "nyc mocha --require ts-node/register \"spec/**/*spec.ts\" --timeout 50000",
     "integration-test": "npm run pretest && nyc mocha --require ts-node/register \"spec-integration/**/*spec.ts\" --timeout 500000",
-    "build": "rm -rf dist && tsc"
+    "build": "rm -rf dist && tsc",
+    "publish-dev": "npm run build && npm publish --tag dev",
+    "publish-prod": "npm run build && npm publish"
   },
   "dependencies": {
     "@elastic.io/jsonata-moment": "1.1.5",
