--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elastic.io/component-commons-library",
-  "version": "3.1.4",
+  "version": "3.1.5-dev.1",
   "description": "Library for most common component development cases",
   "author": {
     "name": "elastic.io GmbH",
@@ -19,6 +19,7 @@
     "elasticio-component"
   ],
   "scripts": {
+    "audit": "better-npm-audit audit --level high --production",
     "lint": "eslint --ext .ts --quiet --fix",
     "pretest": "rm -rf dist && eslint --ext .ts --quiet --fix && find src spec spec-integration -name \"*.js\" -type f -delete",
     "posttest": "tsc",
@@ -28,7 +29,7 @@
   },
   "dependencies": {
     "@elastic.io/jsonata-moment": "1.1.5",
-    "@elastic.io/maester-client": "4.0.3",
+    "@elastic.io/maester-client": "5.0.1",
     "@elastic.io/ntlm-client": "1.0.0",
     "async": "3.2.3",
     "axios": "0.27.2",
