--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@elastic.io/jsonata-moment": "1.1.5",
     "@elastic.io/maester-client": "5.0.1",
     "@elastic.io/ntlm-client": "1.0.0",
+    "better-npm-audit": "3.7.3",
     "async": "3.2.3",
     "axios": "0.27.2",
     "bunyan": "1.8.14",
