--- a/.nsprc
+++ b/.nsprc
@@ -5,6 +5,6 @@
     },
     "GHSA-fqg8-vfv7-8fj": {
             "active": true,
-            "notes": "Maester-client of v5.x doesn't use jsonata functions. So not affected"
+            "notes": "We don't use jsonata functions from Maester-client v5.x. It doesn't use jsonata functions too. So not affected"
         }
 }
