--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "build": "rm -rf dist && tsc"
   },
   "dependencies": {
-    "@elastic.io/jsonata-moment": "1.1.6-dev.1",
-    "@elastic.io/maester-client": "5.0.2-dev.4",
+    "@elastic.io/jsonata-moment": "^1.1.6-dev.1",
+    "@elastic.io/maester-client": "^5.0.2-dev.5",
     "@elastic.io/ntlm-client": "1.0.0",
     "better-npm-audit": "3.7.3",
     "async": "3.2.3",
