--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elastic.io/component-commons-library",
-  "version": "3.2.0",
+  "version": "3.2.1-dev.1",
   "description": "Library for most common component development cases",
   "author": {
     "name": "elastic.io GmbH",
@@ -28,41 +28,41 @@
     "build": "rm -rf dist && tsc"
   },
   "dependencies": {
-    "@elastic.io/jsonata-moment": "1.1.6",
-    "@elastic.io/maester-client": "5.0.2",
-    "@elastic.io/ntlm-client": "1.0.0",
-    "better-npm-audit": "3.7.3",
-    "async": "3.2.3",
-    "axios": "0.27.2",
-    "bunyan": "1.8.14",
-    "bunyan-format": "0.2.1",
-    "bunyan-serializers": "0.0.2",
+    "@elastic.io/jsonata-moment": "^1.1.6",
+    "@elastic.io/maester-client": "^5.0.3",
+    "@elastic.io/ntlm-client": "^1.0.0",
+    "better-npm-audit": "^3.11.0",
+    "async": "^3.2.6",
+    "axios": "^0.27.2",
+    "bunyan": "^1.8.15",
+    "bunyan-format": "^0.2.1",
+    "bunyan-serializers": "^0.0.2",
     "elasticio-node": "0.0.9",
-    "remove-leading-slash": "1.0.1",
-    "remove-trailing-slash": "0.1.1",
-    "request": "2.88.2"
+    "remove-leading-slash": "^1.0.1",
+    "remove-trailing-slash": "^0.1.1",
+    "request": "^2.88.2"
   },
   "devDependencies": {
-    "@types/mocha": "9.0.0",
-    "@types/chai": "4.3.0",
-    "@types/chai-as-promised": "7.1.4",
-    "@types/node": "16.9.6",
-    "@typescript-eslint/eslint-plugin": "4.30.0",
-    "@typescript-eslint/parser": "4.30.0",
-    "chai": "4.3.4",
-    "chai-as-promised": "7.1.1",
-    "dotenv": "10.0.0",
-    "nock": "13.0.4",
-    "tslint": "5.11.0",
-    "tslint-config-airbnb": "5.11.2",
-    "eslint": "7.32.0",
-    "eslint-config-airbnb-base": "14.2.1",
-    "eslint-plugin-import": "2.24.2",
-    "mocha": "9.2.2",
-    "nyc": "15.1.0",
-    "sinon": "11.1.2",
-    "ts-node": "10.2.1",
-    "typescript": "4.4.3"
+    "@types/mocha": "^10.0.7",
+    "@types/chai": "^4.3.19",
+    "@types/chai-as-promised": "^8.0.0",
+    "@types/node": "^16.9.6",
+    "@typescript-eslint/eslint-plugin": "^8.5.0",
+    "@typescript-eslint/parser": "^8.5.0",
+    "chai": "^4.5.0",
+    "chai-as-promised": "^7.1.2",
+    "dotenv": "^16.4.5",
+    "nock": "^13.5.5",
+    "tslint": "^5.11.0",
+    "tslint-config-airbnb": "^5.11.2",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.30.0",
+    "mocha": "^10.7.3",
+    "nyc": "^17.0.0",
+    "sinon": "^18.0.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2"
   },
   "repository": "elasticio/component-commons-library",
   "license": "Apache-2.0"
