--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/node:16-stretch
+      - image: cimg/node:18.13.0
     steps:
       - checkout
       - restore_cache:
