--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elastic.io/component-commons-library",
-  "version": "3.2.1",
+  "version": "3.2.2-dev.1",
   "description": "Library for most common component development cases",
   "author": {
     "name": "elastic.io GmbH",
@@ -29,11 +29,11 @@
   },
   "dependencies": {
     "@elastic.io/jsonata-moment": "^1.1.6",
-    "@elastic.io/maester-client": "^5.0.3",
+    "@elastic.io/maester-client": "^6.0.0",
     "@elastic.io/ntlm-client": "^1.0.0",
     "better-npm-audit": "^3.11.0",
     "async": "^3.2.6",
-    "axios": "^0.27.2",
+    "axios": "^1.8.2",
     "bunyan": "^1.8.15",
     "bunyan-format": "^0.2.1",
     "bunyan-serializers": "^0.0.2",
