--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elastic.io/component-commons-library",
-  "version": "3.2.2",
+  "version": "4.0.0-dev.1",
   "description": "Library for most common component development cases",
   "author": {
     "name": "elastic.io GmbH",
@@ -19,28 +19,19 @@
     "elasticio-component"
   ],
   "scripts": {
-    "audit": "better-npm-audit audit --level high --production",
     "lint": "eslint --ext .ts --quiet --fix",
     "pretest": "rm -rf dist && eslint --ext .ts --quiet --fix && find src spec spec-integration -name \"*.js\" -type f -delete",
     "posttest": "tsc",
-    "test": "nyc mocha --require ts-node/register \"spec/**/*spec.ts\" --timeout 50000",
+    "test": "mocha --require ts-node/register \"spec/**/*spec.ts\" --timeout 50000",
     "integration-test": "npm run pretest && nyc mocha --require ts-node/register \"spec-integration/**/*spec.ts\" --timeout 500000",
     "build": "rm -rf dist && tsc"
   },
   "dependencies": {
     "@elastic.io/jsonata-moment": "^1.1.6",
     "@elastic.io/maester-client": "^6.0.0",
-    "@elastic.io/ntlm-client": "^1.0.0",
-    "better-npm-audit": "^3.11.0",
-    "async": "^3.2.6",
-    "axios": "^1.8.2",
+    "axios": "^1.11.0",
     "bunyan": "^1.8.15",
-    "bunyan-format": "^0.2.1",
-    "bunyan-serializers": "^0.0.2",
-    "elasticio-node": "0.0.9",
-    "remove-leading-slash": "^1.0.1",
-    "remove-trailing-slash": "^0.1.1",
-    "request": "^2.88.2"
+    "bunyan-format": "^0.2.1"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.7",
